# PYTHON-SAMPLES-2025

./: Modelfile  README.md  pyproject.toml
src/python_samples_2025/: .gitignore  abht.sh  haystack-sample.py  my_voice.py  rag-transcriber.py  rag_ollama_transcriber.py  run-pipeline-pro.sh  run-pipeline.sh  servidor_minecraft.sh  servidor_minecraft_universal.sh  speech.py  sphinx.py  start_server_minecraft.sh  transcriber.py  voice_auth_vosk.py  voice_auth_vosk_improved.py  whatdoihave.py
src/python_samples_2025/agno/: Dockerfile  Dockerfile-custom-sec-tools  Dockerfile-custom-sec-tools-ollama  Dockerfile-dvwa  README.md  agno-sample.py  agno-sec.py  build.sh  check_memory.sh  context.json  custom-sec-tools-by-Grok.py  custom-sec-tools-ollama.py  custom-sec-tools.py  custom-tool.py  data_analyst.py  delta_lake_data_analyst.py  docker-compose.yml  entrypoint.sh  generate_exploit_mapping.py  generate_searchsploit_mapping.py  multi-agent-agno.py  nmap_result.json  nmap_result_raw.txt  ollama-agent.py  ollama-entrypoint.sh  pyproject.toml  requirements.txt  stats.sh  thai-cuisine.py
src/python_samples_2025/agno/custom_agents/: ollama_agent.py
src/python_samples_2025/agno/custom_tools/: Hydra_agent.py  metasploit_tool.py  nikto_agent.py  nmap_to_json.xsl  nmap_tool.py  searchxploit_agent.py  shell_tool.py
